<resources>
    <string name="app_name">OctagonAfrica</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="hi_welcome_back">Hi, Welcome Back!</string>
    <string name="email">Email</string>
    <string name="ouda_wycliffe_gmail_com">ouda.wycliffe@gmail.com</string>
    <string name="password">Password</string>
    <string name="june_12th">June 12th</string>
    <string name="overview">Overview</string>
    <string name="good_morning_wycliffe">Good Morning, Wycliffe</string>
    <string name="nice_to_have_you_back">Nice to have you back</string>
    <string name="accounts">Accounts</string>
    <string name="_2">2</string>
    <string name="view">View</string>


</resources>