<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/june_12th"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:padding="24dp"
            android:background="@drawable/rounded_greetings_card_background">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_morning_wycliffe"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/nice_to_have_you_back"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="18dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:background="@drawable/accounts_card_background">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accounts"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="45sp"
                    android:layout_marginLeft="30dp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="30dp"
                        android:padding="10dp"/>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/accounts_card_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Transactions"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginLeft="24dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1500"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="45sp"
                    android:textAlignment="center"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="30dp" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>